automatically backed up by learn

--- a/css/layout.css
+++ b/css/layout.css
@@ -27,12 +27,16 @@
 .col-1 {
   float: left;
   width: 31%;
-  margin-left: 3px;
 }
 
 .col-2 {
   float: left;
   width: 64%;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+  margin-top: 2%;
 }
 
 .first {
